Minor corrections and added comments

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Wireframe</title>
 </head>
 <body>
+    <!--header met menu items-->
     <header>
-        <img src="">
+        <img src="#">
         <nav>
             <ul>
                 <li><a href="#"></a></li>
@@ -19,11 +20,12 @@
         </nav>
     </header>
     <main>
-        <!--image with hyperlink?-->
-        <a href="#"><img src="" alt="call to arms"></a>
+        <!--image met hyperlink-->
+        <a href="#"><img src="#" alt="call to action"></a>
+        <!--twee losse artikelen met vergelijkbare opmaak-->
         <article>
             <h2>Text text text</h2>
-            <img src="">
+            <img src="#">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quia aspernatur, quaerat minus distinctio dolor incidunt architecto eaque facilis, et deleniti excepturi, magni recusandae possimus natus eligendi. Excepturi facilis quod architecto a? Consectetur molestias est temporibus similique voluptates! Illo et provident qui distinctio incidunt? Veniam necessitatibus perferendis ipsum excepturi nisi ab ratione omnis recusandae, consequuntur, repellat blanditiis. Mollitia, ad impedit rerum provident eligendi perspiciatis harum consequuntur, qui natus eos necessitatibus non nulla amet quisquam unde, numquam atque aliquid nihil sunt eum quos totam explicabo! Quaerat hic quia odit, similique tempora esse voluptas veniam ea asperiores debitis itaque quis iste minima?</p>
             <h3>Sample sub-header</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus labore hic obcaecati ex. Id voluptate omnis expedita, deleniti quaerat libero neque totam placeat optio earum ipsam aspernatur commodi sint.</p>
@@ -35,7 +37,7 @@
         </article>
         <article>
             <h2>Text text text</h2>
-            <img src="">
+            <img src="#">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quia aspernatur, quaerat minus distinctio dolor incidunt architecto eaque facilis, et deleniti excepturi, magni recusandae possimus natus eligendi. Excepturi facilis quod architecto a? Consectetur molestias est temporibus similique voluptates! Illo et provident qui distinctio incidunt? Veniam necessitatibus perferendis ipsum excepturi nisi ab ratione omnis recusandae, consequuntur, repellat blanditiis. Mollitia, ad impedit rerum provident eligendi perspiciatis harum consequuntur, qui natus eos necessitatibus non nulla amet quisquam unde, numquam atque aliquid nihil sunt eum quos totam explicabo! Quaerat hic quia odit, similique tempora esse voluptas veniam ea asperiores debitis itaque quis iste minima?</p>
             <h3>Sample sub-header</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus labore hic obcaecati ex. Id voluptate omnis expedita, deleniti quaerat libero neque totam placeat optio earum ipsam aspernatur commodi sint.</p>
@@ -46,6 +48,7 @@
             </ul>
         </article>    
     </main>
+    <!--aside met menu items en call to action-->
     <aside>
         <nav>
             <ul>
@@ -55,8 +58,8 @@
                 <li><a href="#"></a></li>
             </ul>
         </nav>
-        <a href="#"><img src="" alt="call to arms"></a>
+        <a href="#"><img src="#" alt="call to action"></a>
     </aside>
-    <!--geen footer?-->
+    <!--geen footer??-->
 </body>
 </html>
