--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <img src="#">
         <nav>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">menu item 1</a></li>
+                <li><a href="#">menu item 2</a></li>
+                <li><a href="#">menu item 3</a></li>
+                <li><a href="#">menu item 4</a></li>
             </ul>
         </nav>
     </header>
@@ -30,9 +30,9 @@
             <h3>Sample sub-header</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus labore hic obcaecati ex. Id voluptate omnis expedita, deleniti quaerat libero neque totam placeat optio earum ipsam aspernatur commodi sint.</p>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet consectetur.</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
             </ul>
         </article>
         <article>
@@ -42,9 +42,9 @@
             <h3>Sample sub-header</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus labore hic obcaecati ex. Id voluptate omnis expedita, deleniti quaerat libero neque totam placeat optio earum ipsam aspernatur commodi sint.</p>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet consectetur.</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
             </ul>
         </article>    
     </main>
@@ -60,6 +60,33 @@
         </nav>
         <a href="#"><img src="#" alt="call to action"></a>
     </aside>
-    <!--geen footer??-->
+    <!--footer-->
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="#">menu item 1</a></li> 
+                <li><a href="#">menu item 2</a></li>
+                <li><a href="#">menu item 3</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">menu item 4</a></li> 
+                <li><a href="#">menu item 5</a></li>
+                <li><a href="#">menu item 6</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">menu item 7</a></li> 
+                <li><a href="#">menu item 8</a></li>
+                <li><a href="#">menu item 9</a></li>
+            </ul>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti fugit rem repellendus porro animi vel adipisci dolores veniam aliquid placeat?</p>
+            <ul>
+                <li><a href="#">alt menu item 1</a></li> 
+                <li><a href="#">alt menu item 2</a></li>
+                <li><a href="#">alt menu item 3</a></li>
+                <li><a href="#">alt menu item 4</a></li>
+                <li><a href="#">alt menu item 5</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
