--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <aside>
         <nav>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">menu item 1</a></li>
+                <li><a href="#">menu item 2</a></li>
+                <li><a href="#">menu item 3</a></li>
+                <li><a href="#">menu item 4</a></li>
             </ul>
         </nav>
         <a href="#"><img src="#" alt="call to action"></a>
